--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <div class="nav-menu">
             <div class="menu">
               <ul class="nav-list">
-                <li>Главная</li>
-                <li>Сохраненные статьи</li>
+                <li  style="cursor: pointer;">Главная</li>
+                <li  style="cursor: pointer;">Сохраненные статьи</li>
               </ul>
             </div>
             <button class="btn btn-entry">
@@ -48,10 +48,10 @@
           <div class="card">
             <img src="./img/card1.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
               <div class="btn-active-flex-inner">
-                <div class="card-trash">
-                  <img src="./img/trash.svg" alt="Удалить" />
+                <div class="card-trash"  style="cursor: pointer;">
+                  <img src="./img/trash.svg" />
                 </div>
               </div>
             </div>
@@ -70,11 +70,11 @@
           <div class="card">
             <img src="./img/card2.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
               <div class="btn-active-flex-inner">
-                <div class="remove-saved">Убрать из сохраненных</div>
+               
                 <div class="card-trash">
-                  <img src="./img/trash.svg" alt="Удалить" />
+                  <img src="./img/trash.svg"  />
                 </div>
               </div>
             </div>
@@ -92,10 +92,10 @@
           <div class="card">
             <img src="./img/card3.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
               <div class="btn-active-flex-inner">
                 <div class="card-trash">
-                  <img src="./img/trash.svg" alt="Удалить" />
+                  <img src="./img/trash.svg"  style="cursor: pointer;"/>
                 </div>
               </div>
             </div>
@@ -113,9 +113,9 @@
           <div class="card">
             <img src="./img/card1.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
               <div class="btn-active-flex-inner">
-                <div class="card-trash">
+                <div class="card-trash"  style="cursor: pointer;">
                   <img src="./img/trash.svg" alt="Удалить" />
                 </div>
               </div>
@@ -134,9 +134,9 @@
           <div class="card">
             <img src="./img/card2.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
               <div class="btn-active-flex-inner">
-                <div class="card-trash">
+                <div class="card-trash"  style="cursor: pointer;">
                   <img src="./img/trash.svg" alt="Удалить" />
                 </div>
               </div>
@@ -163,8 +163,8 @@
           <div class="footer-menu">
             <div class="menu">
               <ul class="footer-list">
-                <li>Главная</li>
-                <li>Яндекс.Практикум</li>
+                <li  style="cursor: pointer;">Главная</li>
+                <li  style="cursor: pointer;">Яндекс.Практикум</li>
                 <li><img src="./img/github.svg" alt="" /></li>
                 <li><img src="./img/facebook.svg" alt="" /></li>
               </ul>
@@ -179,8 +179,8 @@
           <div class="footerText">© 2020 Supersite, Powered by News API</div>
           <div class="textAndIconsFlex">
             <nav class="footerMenu">
-              <div class="mainFooter">Главная</div>
-              <div class="yaProfi">Яндекс.Практикум</div>
+              <div class="mainFooter"  style="cursor: pointer;">Главная</div>
+              <div class="yaProfi"  style="cursor: pointer;">Яндекс.Практикум</div>
             </nav>
             <div class="iconsFooter">
               <img class="icon1" alt="icon" src="./img/github.svg" />
