--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="card">
             <img src="./img/card2.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Фотография</div>
               <div class="btn-active-flex-inner">
                
                 <div class="card-trash">
@@ -80,11 +80,11 @@
             </div>
             <div class="text">
               <p class="date">2 августа, 2019</p>
-              <h2 class="card-title">Национальное достояние – парки</h2>
+              <h2 class="card-title">Лесные огоньки: история одной фотографии</h2>
               <p class="card-text">
-                В 2016 году Америка отмечала важный юбилей: сто лет назад здесь
-                начала складываться система национальных парков – охраняемых
-                территорий, где и сегодня каждый может приобщиться к природе.
+                Фотограф отвлеклась от освещения суровой политической реальности
+                Мексики, чтобы запечатлеть ускользающую красоту одного из
+                местных чудес природы.
               </p>
               <p class="card-source">Дзен</p>
             </div>
@@ -92,7 +92,7 @@
           <div class="card">
             <img src="./img/card3.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Тайга</div>
               <div class="btn-active-flex-inner">
                 <div class="card-trash">
                   <img src="./img/trash.svg"  style="cursor: pointer;"/>
@@ -101,11 +101,11 @@
             </div>
             <div class="text">
               <p class="date">2 августа, 2019</p>
-              <h2 class="card-title">Национальное достояние – парки</h2>
+              <h2 class="card-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h2>
               <p class="card-text">
-                В 2016 году Америка отмечала важный юбилей: сто лет назад здесь
-                начала складываться система национальных парков – охраняемых
-                территорий, где и сегодня каждый может приобщиться к природе.
+                 Знаменитый фотограф снимает первозданные леса России, чтобы
+                рассказать о необходимости их сохранения. В этот раз он
+                отправился в Двинско-Пинежскую тайгу, где...
               </p>
               <p class="card-source">Дзен</p>
             </div>
@@ -113,7 +113,7 @@
           <div class="card">
             <img src="./img/card1.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Парки</div>
               <div class="btn-active-flex-inner">
                 <div class="card-trash"  style="cursor: pointer;">
                   <img src="./img/trash.svg" alt="Удалить" />
@@ -134,7 +134,7 @@
           <div class="card">
             <img src="./img/card2.jpg" alt="" />
             <div class="btn-active-flex">
-              <div class="card-keyword"  style="cursor: pointer;">Природа</div>
+              <div class="card-keyword"  style="cursor: pointer;">Фотография</div>
               <div class="btn-active-flex-inner">
                 <div class="card-trash"  style="cursor: pointer;">
                   <img src="./img/trash.svg" alt="Удалить" />
@@ -143,11 +143,11 @@
             </div>
             <div class="text">
               <p class="date">2 августа, 2019</p>
-              <h2 class="card-title">Национальное достояние – парки</h2>
+              <h2 class="card-title">Лесные огоньки: история одной фотографии</h2>
               <p class="card-text">
-                В 2016 году Америка отмечала важный юбилей: сто лет назад здесь
-                начала складываться система национальных парков – охраняемых
-                территорий, где и сегодня каждый может приобщиться к природе.
+                Фотограф отвлеклась от освещения суровой политической реальности
+                Мексики, чтобы запечатлеть ускользающую красоту одного из
+                местных чудес природы.
               </p>
               <p class="card-source">Дзен</p>
             </div>
